desktop/zenity: Updated for version 4.0.2.
Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/desktop/zenity/README
+++ b/desktop/zenity/README
@@ -4,7 +4,8 @@ similar to the classic `dialog` program, but with a GUI interface.
 
 OPTIONAL DEPENDENCIES:
 
-* webkit2gtk-4.1
+* webkit2gtk-6.0 (ie, webkitgtk for gtk4; NOT yet part of sbo-ponce as
+  of 2024-07-28)
 
   To enable: pass `WEBKITGTK=true` as an option to the slackbuild.
   If this is not specified, it will default to `false`.
