multimedia/avidemux: Updated for version 20250331_0d19581.
Use qt5 (default is the heavier qt6), rewrote the i386 patch

Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/multimedia/avidemux/README
+++ b/multimedia/avidemux/README
@@ -4,5 +4,5 @@ compatible MPEG files, MP4 and ASF, using a variety of codecs. Tasks
 can be automated using projects, job queue and powerful scripting
 capabilities.
 
-Optional dependencies are aften, amrnb, jack, nv-codec-headers,
-and x265.
+Optional dependencies are aften, amrnb, jack, nv-codec-headers, x265
+and vapoursynth.
