graphics/darktable: Updated for version 5.0.1.
Patch for gcc >= 15.x

Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/graphics/darktable/README
+++ b/graphics/darktable/README
@@ -23,6 +23,7 @@ colord         - for colour profile management
 colord-gtk     - for colour profile management
 osm-gps-map    - for map georeferencing
 jsonschema     - for checking noise profiles
+libavif        - for av1 image format support
 
 If you have nVidia or AMD/ATI graphics with more than 1Gb of memory,
 nvidia-driver (or nvidia-legacy340/304-driver) or amd-app-sdk is an
