--- a/libraries/ogre/README
+++ b/libraries/ogre/README
@@ -31,7 +31,8 @@ For example, in order to build samples too, launch from super user:
 OGRE_BUILD_SAMPLES=ON ./ogre.SlackBuild
 
 Optional dependencies available at SlackBuilds.org:
-zziplib, FreeImage, tbb, cppunit, ois, nvidia-cg-toolkit
+zziplib, FreeImage, tbb, cppunit, ois, nvidia-cg-toolkit, a jdk
+(tested with zulu-openjdk17)
 
 Optional dependencies NOT (yet) available at SlackBuilds.org:
 opengles, POCO
