--- a/development/rstudio-desktop/README
+++ b/development/rstudio-desktop/README
@@ -1,6 +1,6 @@
 RStudio IDE: the most popular coding environment for R
 
-the RStudio integrated development environment (IDE) is a set of tools
+The RStudio integrated development environment (IDE) is a set of tools
 built to help you be more productive with R and Python. It includes a
 console, syntax-highlighting editor that supports direct code execution.
 It also features tools for plotting, viewing history, debugging and
@@ -21,11 +21,6 @@ version, featuring:
 At the moment, the script just repackages the Fedora/Redhat binaries,
 provided by upstream.
 
-NOTE 1:
+NOTE:
 RStudio currently only supports 64-bit systems. The last 32-bit version
 is 1.1.463, provided by "rstudio-desktop-legacy", available at SBo.
-
-NOTE 2:
-RStudio 2024.12.1+563 is the last available version for Slackware 15.0.
-Newer versions require openssl >= 3 (for context, Slackware 15.0 has
-openssl 1.1.1.)
