libraries/vigra: Updated for version 1.12.2, fix for cmake >= 4.x.
Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/libraries/vigra/README
+++ b/libraries/vigra/README
@@ -2,4 +2,4 @@ VIGRA stands for "Vision with Generic Algorithms". It is a
 novel computer vision library that puts its main emphasis
 on customizable algorithms and data structures.
 
-Optional dependencies: nose, numpy, Sphinx
+Optional dependencies: nose, hdf5
