libraries/spdlog: Updated for version 1.15.3.
Use an external fmt (the internal one is incompatible),
disable COMPAT32 building by default as it messes with
the installation directories

Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/libraries/spdlog/README
+++ b/libraries/spdlog/README
@@ -3,5 +3,5 @@ Very fast, header-only/compiled, C++ logging library.
 fmt is an optional dependency and will be autodetected if installed.
 
 This scripts builds both 32bit and 64bit libraries by autodetecting
-multilib. If you are on a multilib system and only wish to build the
-64bit library, pass COMPAT32=no to the build script.
+multilib and if you pass COMPAT32=yes to the build script (this
+needs a 32bit fmt installed in your system)
