--- a/desktop/xdg-desktop-portal-gtk/README
+++ b/desktop/xdg-desktop-portal-gtk/README
@@ -4,3 +4,6 @@ A backend implementation for xdg-desktop-portal that is using
 GTK+ and various pieces of GNOME infrastructure, such as the
 org.gnome.Shell.Screenshot or org.gnome.SessionManager D-Bus
 interfaces.
+
+To enable the wallpaper portal (the dependency gnome-desktop
+is additionally required), pass WALLPAPER=yes to the SlackBuild.
