development/Kiro: Update README.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/development/Kiro/README
+++ b/development/Kiro/README
@@ -3,4 +3,4 @@ with spec-driven development.
 
 NOTE:
 This project is still on waitlist currently, so you need to apply
-for the the code in order to use it.
+for the code in order to use it. It takes up to 14 days to get the code.
