development/qt-creator: Updated for version 18.0.0, move to qt6.
Signed-off-by: Matteo Bernardini <ponce@slackbuilds.org>

--- a/development/qt-creator/README
+++ b/development/qt-creator/README
@@ -13,7 +13,9 @@ NOTES:
 1. This package conflicts with qt-creator2:
    install only one of the two.
 
-2. This version of Qt Creator is advised for Qt5.
+2. This version of Qt Creator is advised for Qt6.
+
+(not sure whatever note that follows still applies... ndPonce)
 
 3. Before building/editing your application, you should configure
    the Qt Kits (Tools -> Options -> Build & Run -> Kits).
